Debugged and edited code. divs in html to js were not lining up correctly. Wasn't able to produce squares. Removed square:hover from CSS since it was fighting with JS eventlistener - mouseover. Edited #gridContainer to display flex and wrap. Was set to CSS grid with height by width at first as something I wanted to test out. The project ask for more flexbox. I was also running into the issue of where to have my functional math for squareSize as it was outside the correct function. It needed to be in the function Grids(size). Lastly my CSS flow was off and screwing with my hovering effect of my grids. Everything is in working order now.

--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@ body{
 }
 
 #gridContainer {
-    display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
+    display: flex;
+    flex-wrap: wrap;
     width: 800px;
     height: 800px;
     border: 2px solid #333;
@@ -21,8 +20,4 @@ body{
     background-color: white;
     box-sizing: border-box;
     transition: background-color 0.3s;
-}
-
-.square:hover {
-    background-color: #f0f0f0;
 }
